--- a/education.html
+++ b/education.html
@@ -207,16 +207,19 @@
            <div class="container">
                <div class="row">
                    <div class="owl-carousel owl-carousel-logos d-flex align-items-center justify-content-between">
-                        <div><img src="img/companies/education/belhaven-universitty.png" alt="Belhaven"></div>
-                        <div><img src="img/companies/education/contra_costa.png" alt="Contra Costa"></div>
-                        <div><img src="img/companies/education/regis-college.png" alt="Regis College"></div>
-                        <div><img src="img/companies/education/robeson-college-banner.png" alt="Robeson"></div>
-                        <div><img src="img/companies/education/state_fair_logo.png" alt="State Fair"></div>
-                        <div><img src="img/companies/education/sunyempirestate.png" alt="Suny Empire"></div>
-                        <div><img src="img/companies/education/uma.png" alt="UMA"></div>
-                        <div><img src="img/companies/education/University-of-Arkansas-Fort-Smith.png" alt="Arkansas"></div>
-                        <div><img src="img/companies/education/university-of-mount-olive.png" alt="Mount Olive"></div>
-                       <div><img src="img/companies/education/scsu.png" alt="Scsu"></div>
+                       <div><img src="img/companies/education/220px-Glendale_Community_College_CA_logo.png" alt="Glendale"></div>
+                       <div><img src="img/companies/education/4557_coa_logo.rev.1480967314.png" alt="COA"></div>
+                       <div><img src="img/companies/education/baker-university-color-1.png" alt="Baker"></div>
+                       <div><img src="img/companies/education/BC3_Logo_pms300(cs).png" alt="B3C"></div>
+                       <div><img src="img/companies/education/Belhaven_University_Main_Logo.png" alt="Belhaven"></div>
+                       <div><img src="img/companies/education/Centra_lCollege_Logo.png" alt="Centra"></div>
+                       <div><img src="img/companies/education/CR_Main_VERT_RED.png" alt="CR Main"></div>
+                       <div><img src="img/companies/education/CuestaCollege_logo_horz_fullcolor_blktxt.png" alt="CuestaCollege"></div>
+                       <div><img src="img/companies/education/hartnell-logo_vert_100px_72dpi.png" alt="Hartnell"></div>
+                       <div><img src="img/companies/education/isothermal Community College.png" alt="Isothermal"></div>
+                       <div><img src="img/companies/education/logo.png" alt="LeMoyne"></div>
+                       <div><img src="img/companies/education/MCC_FNL_Logos-02.png" alt="MCC"></div>
+                       <div><img src="img/companies/education/techlogo-black-orange-full.png" alt="Tech"></div>
                    </div>
                </div>
            </div>
@@ -261,13 +264,13 @@
                <div class="col-6 hide-medium hide-mobile">
                     <div class="row owl-carousel works-carousel">
                         <div>
-                            <img class="img-fluid" src="img/laptop_edu-img.jpg" alt="Carousel">
+                            <img class="img-fluid" src="img/laptop_edu-img-2.jpg" alt="Carousel">
                         </div>
                         <div>
-                            <img class="img-fluid" src="img/laptop_edu-img.jpg" alt="Carousel">
+                            <img class="img-fluid" src="img/laptop_edu-img-2.jpg" alt="Carousel">
                         </div>
                         <div>
-                            <img class="img-fluid" src="img/laptop_edu-img.jpg" alt="Carousel">
+                            <img class="img-fluid" src="img/laptop_edu-img-2.jpg" alt="Carousel">
                         </div>
                     </div>
                     <div class="row dots-works"></div>
