--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                     <div class="d-flex flex-wrap align-items-center">
                             <div class="col-md-12 col-lg-2">
                                     <div class="customer">
-                                        <img class="customer__avatar" src="img/customer-avatar.png" alt="Customer">
+                                        <!-- <img class="customer__avatar" src="img/customer-avatar.png" alt="Customer"> -->
                                         <img class="customer__logo" src="img/customer-logo.png" alt="Customer Company">
                                     </div>
                                 </div>
@@ -301,7 +301,7 @@
                                             <li></li>
                                             <li></li>
                                             <li></li>
-                                            <li class="customer__stars--grey"></li>
+                                            <li></li>
                                         </ul>
                                     </div>
                                     <div class="customer__rating">
@@ -311,7 +311,7 @@
                                             <li></li>
                                             <li></li>
                                             <li></li>
-                                            <li class="customer__stars--grey"></li>
+                                            <li></li>
                                         </ul>
                                     </div>
                                     <div class="customer__rating">
@@ -321,7 +321,7 @@
                                             <li></li>
                                             <li></li>
                                             <li></li>
-                                            <li class="customer__stars--grey"></li>
+                                            <li></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -335,83 +335,10 @@
                                 </div>
                                 <div class="col-md-12 col-lg-4">
                                     <div class="d-flex flex-column customer__info medium-center-text mobile-center-text ">
-                                        <span class="customer__info--name">Bert A.</span>
-                                        <span class="customer__info--note">CIO Higher Education, 51-200 employees</span>
+                                        <span class="customer__info--name">Gordon A.</span>
+                                        <span class="customer__info--note">VP, IT</span>
                                         <ul>
-                                            <li><b>Used the Software for:</b> 1-2 years</li>
-                                            <li><b>Source:</b> Capterra</li>
-                                        </ul>
-                                    </div>
-                                </div>
-                                <div class="col-md-12 col-lg-2">
-                                    <div class="d-flex flex-column text-center">
-                                        <span class="customer__rate">4/5</span>
-                                        <ul class="customer__stars">
-                                            <li></li>
-                                            <li></li>
-                                            <li></li>
-                                            <li></li>
-                                            <li class="customer__stars--grey"></li>
-                                        </ul>
-                                        <span>Overall</span>
-                                    </div>
-                                </div>
-                                <div class="col-md-12 col-lg-4 hide-mobile">
-                                    <div class="customer__rating">
-                                        <span>Easy of use:</span>
-                                        <ul class="customer__stars">
-                                            <li></li>
-                                            <li></li>
-                                            <li></li>
-                                            <li></li>
-                                            <li class="customer__stars--grey"></li>
-                                        </ul>
-                                    </div>
-                                    <div class="customer__rating">
-                                        <span>Features & Functionality:</span>
-                                        <ul class="customer__stars">
-                                            <li></li>
-                                            <li></li>
-                                            <li></li>
-                                            <li class="customer__stars--grey"></li>
-                                            <li class="customer__stars--grey"></li>
-                                        </ul>
-                                    </div>
-                                    <div class="customer__rating">
-                                        <span>Customer Support:</span>
-                                        <ul class="customer__stars">
-                                            <li></li>
-                                            <li></li>
-                                            <li></li>
-                                            <li></li>
-                                            <li class="customer__stars--grey"></li>
-                                        </ul>
-                                    </div>
-                                    <div class="customer__rating">
-                                        <span>Value for Money:</span>
-                                        <ul class="customer__stars">
-                                            <li></li>
-                                            <li></li>
-                                            <li></li>
-                                            <li></li>
-                                            <li class="customer__stars--grey"></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                    </div>
-                    <div class="d-flex flex-wrap align-items-center">
-                            <div class="col-md-12 col-lg-2">
-                                    <div class="customer">
-                                        <img class="customer__avatar" src="img/customer-avatar.png" alt="Customer">
-                                        <img class="customer__logo" src="img/customer-logo.png" alt="Customer Company">
-                                    </div>
-                                </div>
-                                <div class="col-md-12 col-lg-4">
-                                    <div class="d-flex flex-column customer__info medium-center-text mobile-center-text ">
-                                        <span class="customer__info--name">Bert A.</span>
-                                        <span class="customer__info--note">CIO Higher Education, 51-200 employees</span>
-                                        <ul>
-                                            <li><b>Used the Software for:</b> 1-2 years</li>
+                                            <!-- <li><b>Used the Software for:</b> 1-2 years</li> -->
                                             <li><b>Source:</b> Capterra</li>
                                         </ul>
                                     </div>
@@ -424,7 +351,7 @@
                                             <li></li>
                                             <li></li>
                                             <li></li>
-                                            <li class="customer__stars--grey"></li>
+                                            <li></li>
                                         </ul>
                                         <span>Overall</span>
                                     </div>
@@ -436,18 +363,8 @@
                                             <li></li>
                                             <li></li>
                                             <li></li>
-                                            <li class="customer__stars--grey"></li>
-                                            <li class="customer__stars--grey"></li>
-                                        </ul>
-                                    </div>
-                                    <div class="customer__rating">
-                                        <span>Features & Functionality:</span>
-                                        <ul class="customer__stars">
                                             <li></li>
                                             <li></li>
-                                            <li class="customer__stars--grey"></li>
-                                            <li class="customer__stars--grey"></li>
-                                            <li class="customer__stars--grey"></li>
                                         </ul>
                                     </div>
                                     <div class="customer__rating">
@@ -457,7 +374,69 @@
                                             <li></li>
                                             <li></li>
                                             <li></li>
-                                            <li class="customer__stars--grey"></li>
+                                            <li></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                    </div>
+                    <div class="d-flex flex-wrap align-items-center">
+                            <div class="col-md-12 col-lg-2">
+                                    <div class="customer">
+                                        <img class="customer__logo" src="img/customer-logo.png" alt="Customer Company">
+                                    </div>
+                                </div>
+                                <div class="col-md-12 col-lg-4">
+                                    <div class="d-flex flex-column customer__info medium-center-text mobile-center-text ">
+                                        <span class="customer__info--name">Yared G.</span>
+                                        <span class="customer__info--note">Web Developer Information Technology and Services, 201-500 employees</span>
+                                        <ul>
+                                            <li><b>Used the Software for:</b> 2+ years</li>
+                                            <li><b>Source:</b> Capterra</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="col-md-12 col-lg-2">
+                                    <div class="d-flex flex-column text-center">
+                                        <span class="customer__rate">5/5</span>
+                                        <ul class="customer__stars">
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
+                                        </ul>
+                                        <span>Overall</span>
+                                    </div>
+                                </div>
+                                <div class="col-md-12 col-lg-4 hide-mobile">
+                                    <div class="customer__rating">
+                                        <span>Easy of use:</span>
+                                        <ul class="customer__stars">
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
+                                        </ul>
+                                    </div>
+                                    <div class="customer__rating">
+                                        <span>Features & Functionality:</span>
+                                        <ul class="customer__stars">
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
+                                        </ul>
+                                    </div>
+                                    <div class="customer__rating">
+                                        <span>Customer Support:</span>
+                                        <ul class="customer__stars">
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
                                         </ul>
                                     </div>
                                     <div class="customer__rating">
@@ -467,7 +446,7 @@
                                             <li></li>
                                             <li></li>
                                             <li></li>
-                                            <li class="customer__stars--grey"></li>
+                                            <li></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -540,10 +519,10 @@
                             <img class="img-fluid" src="img/laptop-img.jpg" alt="Carousel">
                         </div>
                         <div>
-                            <img class="img-fluid" src="img/laptop-img.jpg" alt="Carousel">
+                            <img class="img-fluid" src="img/laptop-img-2.jpg" alt="Carousel">
                         </div>
                         <div>
-                            <img class="img-fluid" src="img/laptop-img.jpg" alt="Carousel">
+                            <img class="img-fluid" src="img/laptop_edu-img.jpg" alt="Carousel">
                         </div>
                     </div>
                     <div class="row dots-works"></div>
