--- a/education.html
+++ b/education.html
@@ -267,10 +267,13 @@
                             <img class="img-fluid" src="img/laptop_edu-img-2.jpg" alt="Carousel">
                         </div>
                         <div>
-                            <img class="img-fluid" src="img/laptop_edu-img-2.jpg" alt="Carousel">
+                            <img class="img-fluid" src="img/laptop_edu-img.jpg" alt="Carousel">
                         </div>
                         <div>
-                            <img class="img-fluid" src="img/laptop_edu-img-2.jpg" alt="Carousel">
+                                <img class="img-fluid" src="img/laptop-img.jpg" alt="Carousel">
+                        </div>
+                        <div>
+                            <img class="img-fluid" src="img/laptop-img-2.jpg" alt="Carousel">
                         </div>
                     </div>
                     <div class="row dots-works"></div>
@@ -318,11 +321,7 @@
                     </div>
                 </div>
                 <div class="col-6 fixed-price__images d-flex justify-content-between hide-lrg">
-                    <div class="d-flex flex-column justify-content-around">
-                        <img width="227" class="img-fluid hide-mobile" src="img/microsoft-hyper-v.png" alt="Microsoft Hyper">
-                        <img width="123" class="img-fluid hide-mobile" src="img/vmware.png" alt="VMWare">
-                    </div>
-                    <img class="absolute-img img-fluid" width="291" src="img/serwer.png" alt="Serwer">
+                    <img class="absolute-img img-fluid hide-mobile" width="500" src="img/serwer-img.png" alt="Serwer">
                 </div>
             </div>
             <div class="row content-row justify-content-center">
