--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                     <div class="d-flex flex-wrap align-items-center">
                             <div class="col-md-12 col-lg-2">
                                     <div class="customer">
-                                        <img class="customer__avatar" src="img/customer-avatar.png" alt="Customer">
+                                        <!-- <img class="customer__avatar" src="img/customer-avatar.png" alt="Customer"> -->
                                         <img class="customer__logo" src="img/customer-logo.png" alt="Customer Company">
                                     </div>
                                 </div>
@@ -497,11 +497,7 @@
                     </div>
                 </div>
                 <div class="col-6 fixed-price__images d-flex justify-content-between hide-lrg">
-                    <div class="d-flex flex-column justify-content-around">
-                        <img width="227" class="img-fluid hide-mobile" src="img/microsoft-hyper-v.png" alt="Microsoft Hyper">
-                        <img width="123" class="img-fluid hide-mobile" src="img/vmware.png" alt="VMWare">
-                    </div>
-                    <img class="absolute-img img-fluid" width="291" src="img/serwer.png" alt="Serwer">
+                    <img class="absolute-img img-fluid hide-mobile" width="500" src="img/serwer-img.png" alt="Serwer">
                 </div>
             </div>
            <div class="row content-row justify-content-center">
@@ -516,13 +512,16 @@
                <div class="col-6 hide-medium hide-mobile">
                     <div class="row owl-carousel works-carousel">
                         <div>
-                            <img class="img-fluid" src="img/laptop-img.jpg" alt="Carousel">
-                        </div>
-                        <div>
                             <img class="img-fluid" src="img/laptop-img-2.jpg" alt="Carousel">
                         </div>
                         <div>
                             <img class="img-fluid" src="img/laptop_edu-img.jpg" alt="Carousel">
+                        </div>
+                        <div>
+                            <img class="img-fluid" src="img/laptop-img.jpg" alt="Carousel">
+                        </div>
+                        <div>
+                            <img class="img-fluid" src="img/laptop_edu-img-2.jpg" alt="Carousel">
                         </div>
                     </div>
                     <div class="row dots-works"></div>
