--- a/education.html
+++ b/education.html
@@ -348,7 +348,7 @@
                             </div>
                             <div>
                                 <form class="contact-form d-flex subscribe" action="action.php">
-                                    <div><input placeholder="Email Address" type="text" name="email" id="email_subscribe"></div>
+                                    <div><input required placeholder="Email Address" type="text" name="email" id="email_subscribe"></div>
                                     <div><input type="submit" value="Subscribe"></div>
                                 </form>
                             </div>
