Added portrait img

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                     <div class="d-flex flex-wrap align-items-center">
                             <div class="col-md-12 col-lg-2">
                                     <div class="customer">
-                                        <!-- <img class="customer__avatar" src="img/customer-avatar.png" alt="Customer"> -->
+                                        <img class="customer__avatar" src="img/customer-avatar.png" alt="Customer">
                                         <img class="customer__logo" src="img/customer-logo.png" alt="Customer Company">
                                     </div>
                                 </div>
@@ -285,7 +285,7 @@
                                 </div>
                                 <div class="col-md-12 col-lg-4 hide-mobile">
                                     <div class="customer__rating">
-                                        <span>Easy of use:</span>
+                                        <span>Ease of use:</span>
                                         <ul class="customer__stars">
                                             <li></li>
                                             <li></li>
@@ -329,7 +329,7 @@
                     <div class="d-flex flex-wrap align-items-center">
                             <div class="col-md-12 col-lg-2">
                                     <div class="customer">
-                                        <!-- <img class="customer__avatar" src="img/customer-avatar.png" alt="Customer"> -->
+                                        <img class="customer__avatar" src="img/customer-avatar.png" alt="Customer">
                                         <img class="customer__logo" src="img/customer-logo.png" alt="Customer Company">
                                     </div>
                                 </div>
@@ -358,7 +358,7 @@
                                 </div>
                                 <div class="col-md-12 col-lg-4 hide-mobile">
                                     <div class="customer__rating">
-                                        <span>Easy of use:</span>
+                                        <span>Ease of use:</span>
                                         <ul class="customer__stars">
                                             <li></li>
                                             <li></li>
@@ -382,6 +382,7 @@
                     <div class="d-flex flex-wrap align-items-center">
                             <div class="col-md-12 col-lg-2">
                                     <div class="customer">
+                                        <img class="customer__avatar" src="img/customer-avatar.png" alt="Customer">
                                         <img class="customer__logo" src="img/customer-logo.png" alt="Customer Company">
                                     </div>
                                 </div>
@@ -410,7 +411,7 @@
                                 </div>
                                 <div class="col-md-12 col-lg-4 hide-mobile">
                                     <div class="customer__rating">
-                                        <span>Easy of use:</span>
+                                        <span>Ease of use:</span>
                                         <ul class="customer__stars">
                                             <li></li>
                                             <li></li>
