--- a/index.html
+++ b/index.html
@@ -368,7 +368,27 @@
                                         </ul>
                                     </div>
                                     <div class="customer__rating">
+                                        <span>Features & Functionality:</span>
+                                        <ul class="customer__stars">
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
+                                        </ul>
+                                    </div>
+                                    <div class="customer__rating">
                                         <span>Customer Support:</span>
+                                        <ul class="customer__stars">
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
+                                        </ul>
+                                    </div>
+                                    <div class="customer__rating">
+                                        <span>Value for Money:</span>
                                         <ul class="customer__stars">
                                             <li></li>
                                             <li></li>
