Old serwer back

--- a/education.html
+++ b/education.html
@@ -318,7 +318,11 @@
                     </div>
                 </div>
                 <div class="col-6 fixed-price__images d-flex justify-content-between hide-lrg">
-                    <img class="absolute-img img-fluid hide-mobile" width="500" src="img/serwer-img.png" alt="Serwer">
+                    <div class="d-flex flex-column justify-content-around">
+                        <img width="227" class="img-fluid hide-mobile" src="img/microsoft-hyper-v.png" alt="Microsoft Hyper">
+                        <img width="123" class="img-fluid hide-mobile" src="img/vmware.png" alt="VMWare">
+                    </div>
+                    <img class="absolute-img img-fluid" width="291" src="img/serwer.png" alt="Serwer">
                 </div>
             </div>
             <div class="row content-row justify-content-center">
