--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                                 </div>
                                 <div class="col-md-12 col-lg-4 hide-mobile">
                                     <div class="customer__rating">
-                                        <span>Ease of use:</span>
+                                        <span>"Ease" of use:</span>
                                         <ul class="customer__stars">
                                             <li></li>
                                             <li></li>
@@ -358,7 +358,7 @@
                                 </div>
                                 <div class="col-md-12 col-lg-4 hide-mobile">
                                     <div class="customer__rating">
-                                        <span>Ease of use:</span>
+                                        <span>"Ease" of use:</span>
                                         <ul class="customer__stars">
                                             <li></li>
                                             <li></li>
@@ -431,7 +431,7 @@
                                 </div>
                                 <div class="col-md-12 col-lg-4 hide-mobile">
                                     <div class="customer__rating">
-                                        <span>Ease of use:</span>
+                                        <span>"Ease" of use:</span>
                                         <ul class="customer__stars">
                                             <li></li>
                                             <li></li>
@@ -518,7 +518,11 @@
                     </div>
                 </div>
                 <div class="col-6 fixed-price__images d-flex justify-content-between hide-lrg">
-                    <img class="absolute-img img-fluid hide-mobile" width="500" src="img/serwer-img.png" alt="Serwer">
+                    <div class="d-flex flex-column justify-content-around">
+                        <img width="227" class="img-fluid hide-mobile" src="img/microsoft-hyper-v.png" alt="Microsoft Hyper">
+                        <img width="123" class="img-fluid hide-mobile" src="img/vmware.png" alt="VMWare">
+                    </div>
+                    <img class="absolute-img img-fluid" width="291" src="img/serwer.png" alt="Serwer">
                 </div>
             </div>
            <div class="row content-row justify-content-center">
