--- a/education.html
+++ b/education.html
@@ -304,6 +304,7 @@
             <div class="row content-row j-center">
                 <div class="col-lg-6 col-md-8 offset-lg-1 medium-center-text mobile-center-text">
                     <h2>Unlimited Users. One Fixed Price.</h2>
+                    <p>Smaller micro copy size.</p>
                 </div>
             </div>
             <div class="row content-row j-center">
