--- a/education.html
+++ b/education.html
@@ -304,7 +304,7 @@
             <div class="row content-row j-center">
                 <div class="col-lg-6 col-md-8 offset-lg-1 medium-center-text mobile-center-text">
                     <h2>Unlimited Users. One Fixed Price.</h2>
-                    <p>Talk to us about a lower price.</p>
+                    <p>Lower user count? Talk to us about a lower price.</p>
                 </div>
             </div>
             <div class="row content-row j-center">
