--- a/index.html
+++ b/index.html
@@ -184,24 +184,34 @@
        </div>
        <div class="container-fluid hero-img hero-img_home">
            <div data-aos="fade-up" class="container">
-               <div class="row justify-content-center">
-                   <div class="col-lg-9 col-md-12 col-10 text-center">
-                        <h1>
-                            <span class="green-text">One password.</span> Self-service.<br /> 
-                            Compliance. Integration.
-                        </h1>
+               <div class="row j-center">
+                   <div class="col-lg-7 col-10">
+                        <div class="row">
+                            <div class="col-12 medium-center-text">
+                                <h1>
+                                    <span class="green-text">One password.</span> Self-service. 
+                                    Compliance. Integration.
+                                </h1>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12 medium-center-text">
+                                <p>Connecting thousands of user identities to all the apps they need is messy. PortalGuard software helps organizations with Identity Management solutions such as single sign on, self-password reset, two factor authentication and more.</p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12 d-flex j-center medium-center-text">
+                                <a class="btn btn-white-border btn-margin-right" href="#">For Schools</a><a class="btn btn-white-border float-right" href="#">Demo Request</a>
+                            </div>
+                        </div> 
                    </div>
-                </div>
-                <div class="row justify-content-center">
-                    <div class="col-lg-6 col-10 text-center">
-                        <p>Connecting thousands of user identities to all the apps they need is messy. PortalGuard software helps organizations with Identity Management solutions such as single sign on, self-password reset, two factor authentication and more.</p>
+                   <div class="col-lg-5 col-sm-10 col-xs-11 page-header__video">
+                        <div class="video-container">
+                            <a href="#"><img class="video-container__play" src="svg/play-btn.svg" alt=""></a>                     
+                            <img class="img-fluid" width="610" src="img/play-video-bg.png" alt="Video">
+                        </div>
                    </div>
-                </div>
-                <div class="row justify-content-center">
-                    <div class="col-lg-4 col-md-6 col-11 d-flex justify-content-around">
-                        <a class="btn btn-white-border" href="#">For Schools</a><a class="btn btn-white-border float-right" href="#">Demo Request</a>
-                    </div>
-                </div>               
+               </div>              
            </div>
        </div>
        <div class="container-fluid companies">
